<resources>
    <string name="app_name">SharePlate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings used for view labels -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="go_birding">Go Birding</string>
    <string name="my_aviary">My Aviary</string>
    <string name="identify_bird">Identify Bird</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="show_distance_in">Show Distance In:</string>
    <string name="bird_facts">Bird Facts</string>
    <string name="community">Community</string>
    <string name="about_us">About Us</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="blog_text">These birds like doing 10 – 15 circular laps just before sunset, around my neighborhood. Do you guys have any idea what does this mean?</string>
    <string name="reply">Reply</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="bird_name_species">Bird Name/species</string>
    <string name="behavior">Behavior</string>
    <string name="notes">Notes</string>
    <string name="add_observation">Add Observation</string>
    <string name="choose_max_search_distance">Choose The Max Search Distance</string>
    <string name="notes_cardview">Notes:</string>
    <string name="a_pair_of_flamingos_they_looked_liked_they_were_mating">A pair of Flamingos, they looked liked they were mating.</string>
    <string name="dashboard">Dashboard</string>
    <string name="blog">Community</string>
    <string name="imperial_miles">Imperial (Miles)</string>
    <string name="remember_me">Remember me?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="caption">Caption</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Meal Types -->
    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Appetizers</item>
        <item>Snacks</item>
        <item>Desserts</item>
        <item>Beverages</item>
        <item>Salads</item>
        <item>Soups</item>
        <item>Main Courses</item>
        <item>Side Dishes</item>
        <item>Smoothies</item>
        <item>Finger Foods</item>
        <item>Street Food</item>
        <item>Comfort Food</item>
        <item>Kids Meals</item>
        <item>Festive Meals</item>
        <item>Low-Calorie Meals</item>
        <item>High-Protein Meals</item>
        <item>Vegan Meals</item>
        <item>Vegetarian Meals</item>
        <item>Gluten-Free Meals</item>
        <item>Dairy-Free Meals</item>
        <item>Keto Meals</item>
        <item>Paleo Meals</item>
        <item>Meal Preps</item>
        <item>Sandwiches and Wraps</item>
        <item>Bowls</item>
        <item>BBQ and Grilled Meals</item>
    </string-array>

    <!-- Cuisines -->
    <string-array name="cuisines">
        <item>Italian</item>
        <item>Mexican</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Japanese</item>
        <item>French</item>
        <item>Mediterranean</item>
        <item>Thai</item>
        <item>Greek</item>
        <item>Middle Eastern</item>
        <item>Korean</item>
        <item>Spanish</item>
        <item>Vietnamese</item>
        <item>American</item>
        <item>Ethiopian</item>
        <item>Brazilian</item>
        <item>Caribbean</item>
        <item>Moroccan</item>
        <item>Filipino</item>
        <item>South African</item>
    </string-array>

    <!-- Allergens -->
    <string-array name="allergens">
        <item>Peanuts</item>
        <item>Tree Nuts</item>
        <item>Dairy</item>
        <item>Eggs</item>
        <item>Fish</item>
        <item>Shellfish</item>
        <item>Wheat (Gluten)</item>
        <item>Soy</item>
        <item>Sesame</item>
        <item>Mustard</item>
        <item>Sulfites</item>
        <item>Lupin</item>
        <item>Celery</item>
        <item>Gluten (wheat, barley, rye)</item>
        <item>Corn</item>
        <item>Citrus Fruits</item>
        <item>Garlic</item>
        <item>Alcohol</item>
    </string-array>

    <!-- User Status -->
    <string-array name="userStatus">
        <item>Initial</item>
        <item>Active</item>
        <item>Inactive</item>
        <item>Suspended</item>
    </string-array>

    <!-- User Types -->
    <string-array name="userTypes">
        <item>Donee</item>
        <item>Donor</item>
        <item>Broker</item>
    </string-array>

</resources>