<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:background="#3A4AA6"
        android:gravity="center"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        tools:srcCompat="@mipmap/logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:layout_marginTop="-30dp"
        android:textFontWeight="400"
        android:text="@string/sign_in"
        android:textColor="@color/text_color"
        android:textSize="80sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="@android:drawable/sym_action_email"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/password"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/etPassWord"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70sp"
        android:padding="5dp"
        android:text="@string/forgot_password"
        android:textSize="17sp"
        android:textColor="#B7021A57"
        android:gravity="right"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:backgroundTint="@color/button_color"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_in"
        app:cornerRadius="25dp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="3dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textSize="17sp"
        android:textColor="#B7021A57"
        android:clickable="true"/>

</androidx.appcompat.widget.LinearLayoutCompat>