<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:background="#3A4AA6"
        android:gravity="center"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        tools:srcCompat="@mipmap/logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:layout_marginTop="-30dp"
        android:textFontWeight="400"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:textSize="80sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/user"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:background="@android:drawable/sym_action_email"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/password"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_vview"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/password"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginStart="10dp"/>
        <EditText
            android:id="@+id/et_re_enter_Password"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:gravity="fill_vertical"
            android:textStyle="bold"
            android:background="#00FFFFFF"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="#5E000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="User Type:"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/UserTypeSpinner"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="6dp"
            android:textAlignment="center"
            android:tooltipText="User Type"
            android:background="@drawable/spinner"
            android:dropDownSelector="@color/blog"
            android:foregroundTint="@color/blog" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:backgroundTint="@color/button_color"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_up"
        app:cornerRadius="25dp" />

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/already_have_an_account_sign_in"
        android:layout_marginTop="5sp"
        android:textColor="#B7021A57"
        android:textSize="17sp"
        android:layout_marginBottom="5sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>